@@ -1,3 +1,10 @@
+2010-06-12  Colomban Wendling  <ban(at)herbesfolles(dot)org>
+
+  * src/ggd-tag-utils.c:
+    Fix finding of tag's children. Pretty hackish fix but it now works even if
+    there is two top-level tags sharing the same name.
+
+
 2010-06-04  Colomban Wendling  <ban(at)herbesfolles(dot)org>
 
   * src/ggd.c:
